--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -1,5 +1,5 @@
 {
     "woso_mitsu_aircon_rac adapter settings": "Ajustes del adaptador para woso_mitsu_aircon_rac",
     "ip": "IP-Address of the Aircon",
-    "timer": "Time in s to retrieve data from the aircon"
+    "timer": "Time in min to retrieve data from the aircon"
 }
